# Open_Ai_Agents

Assignment_1/: .env  pyproject.toml
Hands_off/: app.py  main.py
Tools/: main.py  pyproject.toml
context-management/: app.py  connection.py  function-tool.py  main.py  pyproject.toml
inventory_management/: main.py  pyproject.toml
lite_LLM/: main.py
open_ai_router/: main.py  pyproject.toml
project_1/: .env  app.py  main-1.py  main-2.py  main-3.py  main-4.py  main-5.py  model_2.py  model_3.py  model_4.py  model_5.py  procfile  pyproject.toml
project_2/: .env  pyproject.toml
simple-chatbot/: main.py  pyproject.toml
